made cards have 200px width and height and wrap correctly

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -23,7 +23,6 @@ body {
   background: #eee;
   color: darkmagenta;
   display: flex;
-  flex: 1;
   justify-content: center;
   align-items: center;
 }
@@ -32,6 +31,9 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-shrink: 0;
+  padding: 16;
 }
 
 .card {
@@ -40,8 +42,10 @@ body {
   border-radius: 4px;
   display: flex;
   padding: 16px;
-  height: 100px;
-  flex: 1;
+  height: 200px;
+  width: 200px;
+  flex: auto;
+  flex-wrap: wrap;
 }
 
 .content {
@@ -66,9 +70,8 @@ a {
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 16px;
 }
 
 li {
-  margin: 16px;
+  padding: 16px;
 }
